[package]
name = "nft-staking-lottery"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = { version = "1.5.11", features = ["staking"] }
cosmwasm-schema = "1.5.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cw20 = "0.10.3"
cw721 = "0.10.1"
cw-storage-plus = "0.10.3"
rand = "0.8.5"
serde_with = "2.3.3"
schemars = { version = "0.8", features = ["derive"], default-features = false }


[build-dependencies]
cosmwasm-schema = "1.5.11"
